--- a/index.html
+++ b/index.html
@@ -58,6 +58,34 @@
       }
     }
 
+    /* Elegant Rain Effect (designed for light backgrounds) */
+    .rain-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 50;
+      overflow: hidden;
+    }
+    .rain-drop {
+      position: absolute;
+      top: -10vh;
+      width: 2px;
+      background: linear-gradient(180deg, rgba(96,165,250,0.9), rgba(59,130,246,0.6));
+      border-radius: 2px;
+      filter: drop-shadow(0 4px 6px rgba(59,130,246,0.12));
+      animation: rain-fall linear infinite;
+      transform-origin: top left;
+      opacity: 0.9;
+    }
+    @keyframes rain-fall {
+      0% { transform: translateY(0) translateX(0) rotate(-10deg); opacity: 0; }
+      10% { opacity: 0.9; }
+      100% { transform: translateY(120vh) translateX(40px) rotate(10deg); opacity: 0; }
+    }
+
     .shadow-orange-soft {
       box-shadow: 0 10px 30px -5px rgba(249, 115, 22, 0.08);
     }
